# AES-GCM-SIV-WASM-POC

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh  run.sh
.github/workflows/: main.yml
lib/: Cargo.toml
lib/src/: decrypt.rs  encrypt.rs  key.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: web.rs
webserver/: Cargo.toml
webserver/src/: main.rs
www/: index.css  index.html  index.js
www/assets/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
