[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
aes-gcm-siv = "0.11.1"
base64 = "0.21.0"
anyhow = "1.0.71"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }